--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -16,7 +16,17 @@ security:
             security: false
         main:
             anonymous: true
-
+            stateless: true
+            provider: app_user_provider
+            json_login:
+                check_path: /auth
+                username_path: username
+                password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
