Confirm Account with Random Token
All users are disabled by default and have to provide 
 a secret Token to get their account enbled, once enable the associated token is deleted

--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -27,6 +27,8 @@ security:
             guard:
                 authenticators:
                     - App\Security\TokenAuthenticator
+            user_checker: App\Security\UserEnabledChecker
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
