Confirm Account with Email
Need install Swift Mailer by executing these commands :
- docker exec -it api-platform_php_1 sh 
- composer require symfony/swiftmailer-bundle

--- a/api/.env
+++ b/api/.env
@@ -48,3 +48,10 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=313d8cd131b2982d3e3aab2e9824e309
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://wassim.arfa:dclgtpjkrkboqcfv@localhost
+###< symfony/swiftmailer-bundle ###
