--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.1.2",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
   },
