--- a/api/composer.json
+++ b/api/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.1",
         "doctrine/doctrine-migrations-bundle": "^2.0",
+        "gesdinet/jwt-refresh-token-bundle": "^0.9.1",
         "guzzlehttp/guzzle": "^6.3",
         "lexik/jwt-authentication-bundle": "^2.6",
         "symfony/console": "4.4.*",
