--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -28,6 +28,10 @@ security:
                 authenticators:
                     - App\Security\TokenAuthenticator
             user_checker: App\Security\UserEnabledChecker
+        refresh:
+            pattern:  ^/refresh-token
+            stateless: true
+            anonymous: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -38,5 +42,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/refresh-token, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
