--- a/api/composer.json
+++ b/api/composer.json
@@ -15,7 +15,8 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/mercure-bundle": "^0.2",
         "symfony/swiftmailer-bundle": "^3.4",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+        "tilleuls/forgot-password-bundle": "^1.3"
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
@@ -63,7 +64,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "4.4.*"
         }
     }
