--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -43,5 +43,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/refresh-token, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/forgot_password, role: IS_AUTHENTICATED_ANONYMOUSLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
