--- a/api/composer.json
+++ b/api/composer.json
@@ -16,7 +16,8 @@
         "symfony/mercure-bundle": "^0.2",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/yaml": "4.4.*",
-        "tilleuls/forgot-password-bundle": "^1.3"
+        "tilleuls/forgot-password-bundle": "^1.3",
+        "vich/uploader-bundle": "^1.13"
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
