--- a/api/.env
+++ b/api/.env
@@ -55,3 +55,8 @@ JWT_PASSPHRASE=313d8cd131b2982d3e3aab2e9824e309
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://wassim.arfa:dclgtpjkrkboqcfv@localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> hwi/oauth-bundle ###
+FB_ID=
+FB_SECRET=
+###< hwi/oauth-bundle ###
