--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,20 +1,8 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# Dependency directories
+node_modules/
 
-# dependencies
-/node_modules
+# next.js build output
+.next
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# production server output
+dist
