--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
@@ -13,7 +13,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
-    "next": "latest",
+    "next": "^9.3.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
