--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,13 @@
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-form": "^8.2.5",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "connected-react-router": "^6.8.0",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
