--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,11 @@
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-form": "^8.2.5",
+    "@types/webpack-env": "^1.15.2",
     "antd": "^4.2.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "connected-react-router": "^6.8.0",
+    "easy-peasy": "^3.3.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -29,6 +30,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-first-history": "^4.5.0",
     "redux-form": "^8.3.5",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
