--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -16,7 +16,7 @@ security:
             security: false
         main:
             anonymous: true
-            stateless: false
+            stateless: true
             provider: app_user_provider
             json_login:
                 check_path: /auth
